--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -16,16 +16,9 @@
   align-items: center;
 }
 
-.furima-icon {
+.logo-icon {
   width: 10vw;
   margin-right: 10vw;
-}
-
-.search-form {
-  width: 65vw;
-  height: 5vh;
-  display: flex;
-  margin-bottom: 5px;
 }
 
 .search-form>.input-box {
