--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/header"%>
+<%= render "shared/second-header"%>
 
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
 <div class='form-wrap'>
@@ -15,7 +15,7 @@
       <label class="form-text">ニックネーム</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"40" %>
+    <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) 田中太郎", maxlength:"40" %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
@@ -49,28 +49,17 @@
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">お名前(全角)</label>
-      <span class="indispensable">必須</span>
+      <label class="form-text">性別</label>
+      <span class="indispensable">任意</span>
     </div>
-    <div class='input-name-wrap'>
-      <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
-      <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">お名前カナ(全角)</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <div class='input-name-wrap'>
-      <%= f.text_area :kana_last_name, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
-      <%= f.text_area :kana_first_name, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+    <div class='input-sex-wrap'>
+      <%= f.collection_select(:category_id, Sex.all, :id, :name, {}, {class:"select-box", id:"user-category"}) %>
     </div>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">生年月日</label>
-      <span class="indispensable">必須</span>
+      <span class="indispensable">任意</span>
     </div>
     <div class='input-birth-wrap'>
       <%= raw sprintf(
@@ -86,6 +75,35 @@
                   "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
     </div>
     <p class='info-text'>※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。</p>
+  </div>
+  <div class="weight-bold-text">
+    居住地（都道府県）
+    <span class="indispensable">任意</span>
+  </div>
+  <%= f.collection_select(:prefecture_id, Prefecture.all, :id, :name, {}, {class:"select-box", id:"user-prefecture"}) %>
+  <div class="weight-content">
+    <div class="weight-bold-text">
+      <span>体重</span>
+      <span class="indispensable">必須</span>
+    </div>
+    <%= f.text_field :weight, class:"weight-input", id:"user-weight", placeholder:"例）50.0" %>
+    <span class="weight-kg">kg</span>
+  </div>
+  <div class="height-content">
+    <div class="weight-bold-text">
+      <span>身長</span>
+      <span class="indispensable">必須</span>
+    </div>
+    <%= f.text_field :height, class:"height-input", id:"user-height", placeholder:"例）160.0" %>
+    <span class="height-cm">cm</span>
+  </div>
+  <div class="fat-percentage-content">
+    <div class="weight-bold-text">
+      <span>体脂肪率</span>
+      <span class="indispensable">任意</span>
+    </div>
+    <%= f.text_field :fat_percentage, class:"fat-percentage-input", id:"user-fat-percentage", placeholder:"例）20.0" %>
+    <span class="fat-percentage-%">%</span>
   </div>
   <div class="form-group">
     <h2 class='form-bottom-text'>
