--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
   <link rel="stylesheets/shared" href="header.css">
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-    <%= link_to image_tag("logo.png", class:"furima-icon"), "/" %>
+    <%= link_to image_tag("logo.png", class:"logo-icon"), "/" %>
     <ul class='lists-right'>
       <% if user_signed_in? %>
         <li><%= link_to 'マイページ', root_path, class: "user-nickname" %></li>
