--- a/app/assets/stylesheets/users/registration.css
+++ b/app/assets/stylesheets/users/registration.css
@@ -166,3 +166,18 @@
   text-align: right;
   cursor: pointer;
 }
+
+.login-btn {
+  width: 50%;
+  margin:30px auto;
+}
+
+.login-red-btn {
+  width: 100%;
+  background: #ea352d;
+  border: 1px solid #ea352d;
+  color: #fff;
+  line-height: 48px;
+  font-size: 14px;
+  cursor: pointer;
+}
