--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -112,6 +112,26 @@
       <%= f.text_field :fat_percentage, class:"weight-input", id:"user-weight", placeholder:"例）20.0" %>
     </div>
   </div>
+  <%# BMI %>
+  <div class="form-group">
+    <label class="form-text">現在のあなたのBMI</label>
+    <span>
+      【<span id='now-bmi'></span>】
+    </span>
+  <label class="form-text">【参考】BMI一覧表</label>
+    <%= link_to image_tag("bmi.png", class:"bmi-image"), "/" %>
+  </div>
+  <div class="form-group">
+    <div class="form-text-wrap">
+      <label class="form-text">目標BMI</label>
+      <span class="indispensable">任意</span>
+    </div>
+    <div class='input-sex-wrap'>
+      <%= f.text_field :target_bmi, class:"bmi-input", id:"target-bmi", placeholder:"例）18.0" %>
+    </div>
+    <span>あなたの目標体重は【<span id='tentative-weight'></span>kg】前後です。</span>
+  </div>
+  <%# /BMI %>
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">目標体重（kg）</label>
@@ -121,17 +141,9 @@
       <%= f.text_field :target_weight, class:"weight-input", id:"user-weight", placeholder:"例）50.0" %>
     </div>
   </div>
-  <div class="form-group">
-    <h2 class='form-bottom-text'>
-      「会員登録」のボタンを押すことにより、
-      <span>利用規約</span>
-      <br>に同意したものとみなします
-    </h2>
-  </div>
   <div class='register-btn'>
     <%= f.submit "会員登録" ,class:"register-red-btn" %>
   </div>
-  <p class='register-info'>本人情報の登録について</p>
 </div>
 <% end %>
 
