ユーザー新規登録

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -122,7 +122,7 @@
   </div>
   <div class="form-group">
     <div class="form-text-wrap">
-      <label class="form-text">◼️目標BMIを入力すると、参考体重が表示されます。</label>
+      <label class="form-text">◼️目標BMIを入力すると、参考目標体重が表示されます。</label><br>
       <label class="form-text">目標BMI</label>
       <span class="indispensable">任意</span>
     </div>
