--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -53,7 +53,7 @@
       <span class="indispensable">任意</span>
     </div>
     <div class='input-birth-wrap'>
-      <%= f.collection_select(:category_id, Sex.all, :id, :name, {}, {class:"select-box", id:"user-category"}) %>
+      <%= f.collection_select(:sex_id, Sex.all, :id, :name, start_year: 1930, {}, {class:"select-box", id:"user-category"}) %>
     </div>
   </div>
   <div class="form-group">
