--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,10 +1,10 @@
-  <link rel="stylesheets/shared" href="header.css">
+<link rel="stylesheets/shared" href="header.css">
 <header class='top-page-header'>
   <div class='search-bar-contents'>
     <%= link_to image_tag("logo.png", class:"logo-icon"), "/" %>
     <ul class='lists-right'>
       <% if user_signed_in? %>
-        <li><%= link_to 'マイページ', root_path, class: "user-nickname" %></li>
+        <li><%= link_to 'マイページ', edit_user_registration_path(current_user), class: "user-nickname" %></li>
         <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
       <% else %>
         <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
