--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,7 @@
 <%= render "shared/header"%>
 
-<%= form_with(model: @post, local: true) do |f| %>
+<%= form_with model: @post, local: true do |f| %>
+
   <%# エラー発生時のメッセージ表示%>
   <%= render 'shared/error_messages', model: f.object %>
 
@@ -119,6 +120,7 @@
   </div>
   <div class='register-btn'>
     <%= f.submit "登録する" ,class:"register-red-btn" %>
+    <%=link_to 'もどる', root_path, class:"back-btn" %>
   </div>
 <% end %>
 
