--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -155,6 +155,16 @@
   cursor: pointer;
 }
 
+.back-btn {
+  width: 100%;
+  background: white;
+  border: 1px solid white;
+  color: gray;
+  line-height: 48px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
 .register-info {
   margin: 30px 180px 0 0;
   color: #0099e8;
