--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,6 @@
+<head>
+<%= javascript_include_tag "bmi2.js" %>
+</head>
 <%= render "shared/header"%>
 
 <%= form_with model: @post, local: true do |f| %>
