--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_pack_tag "bmi.js" %>
 <%= render "shared/second-header"%>
 
 <%= form_with model: @user, url: edit_user_registration_path, class: 'registration-main', local: true do |f| %>
@@ -137,5 +138,3 @@
 <% end %>
 
 <%= render "shared/footer"%>
-
-
